<resources>
    <string name="app_name">Library Database App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="publishing_house">Publishing house</string>
    <string name="pages">Pages</string>
    <string name="cost">Cost</string>
    <string name="currency">$</string>
    <string-array name="genres">
        <item>Fiction</item>
        <item>Education</item>
        <item>Science</item>
        <item>Philosophy</item>
        <item>Religion</item>
        <item>Health</item>
        <item>Art</item>
    </string-array>
    
</resources>